Bug 292642 - dolphin doesnt expand folders for ISO mounted files
Summary: dolphin doesnt expand folders for ISO mounted files
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: folders (other bugs)
Version First Reported In: 2.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-01-28 00:38 UTC by
Modified: 2012-02-03 15:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments
Screenshot showing that doesnt show the mounted ISO file as an expandable folder (134.82 KB, image/png)
2012-01-28 00:43 UTC,
Details

Note You need to log in before you can comment on or make changes to this bug.
Description 2012-01-28 00:38:46 UTC
Version:           2.0 (using Devel) 
OS:                Linux

dolphin doesnt expand folders for ISO mounted files in folders panel (leftpanel).
In right panel the folders appear expaned (since now the user only haves expanded folders in right panel).

Reproducible: Always

Steps to Reproduce:
Mount an iso file image, and then you willl see that dolphin shows the folder as NOT expandable in left folder (left folder).

Actual Results:  
Dolphin isnt able to correctly show in folders panel the folders tree of an ISO mounted file.

Expected Results:  
Should be able to expand folders in folders panel for ISO mounted files.

OS: Linux (x86_64) release 3.2.2-1.1-desktop
Compiler: gcc
Comment 1 2012-01-28 00:43:58 UTC
Created attachment 68258 [details]
Screenshot showing that doesnt show the mounted ISO file as an expandable folder
Comment 2 S. Bryant 2012-02-02 22:53:05 UTC
I have the same problem, but for my $HOME, which is on the root partition (XFS).  I'm using the RPMs from the OpenSUSE 12.1 repository for KDE 4.8.0 (x86_64).

If I start "dolphin $HOME" it will expand the tree view to show my home directory and the directories it contains, but all of the directory expander icons are missing, and it won't show any further subdirectories.

I can use the view panel to navigate into subdirectories, but the tree view won't follow me.  The details view mode has no problem showing the expanders - but annoyingly this can no longer be turned off, which is a regression from the previous version.

Other directories on the partition, such as /usr, /var and /opt are also listed without expanders.

I mounted an ISO using loopback - same problem, just as Zé reported.  Using a real CD exhibits the same problem too.

Strangely, an external disk with XFS was shown with expanders.  Also OK were a USB stick with NTFS, /proc, various tmpfs/devtmpfs mounts and /boot (ext3).

This behaviour seems unique to dolphin; konqueror displays expanders properly for the same paths.

The only thing I can think of that I haven't tried is to reboot.  I'll post a new comment if that fixes it.

Perhaps this has come as a result of somebody trying to do something clever in response to bug 171021 (don't show expanders for empty dirs).  Whatever it was, it's new in KDE 4.8 and wasn't in 4.7.

Steve
Comment 3 S. Bryant 2012-02-02 23:24:28 UTC
More testing:

Rebooting changed nothing.
I unmounted /boot (ext3 - was shown with expanders) and mounted it on /mnt.  Dolphin wouldn't show me the expanders for /mnt; after putting it back to /boot there were no more expanders there either.  :-(

Steve
Comment 4 Peter Penz 2012-02-03 15:14:57 UTC
Git commit 6f65a1745caccc1fe27522a001592a3315325084 by Peter Penz.
Committed on 03/02/2012 at 09:57.
Pushed by ppenz into branch 'KDE/4.8'.

Folders Panel: Show expansion toggles for directories on ISO-images

When counting the number of sub-directories consider unknown file types
as potential directories. In the "worst case" an expansion toggle will be
shown although the directory contains only files, however from a performance
point of view this seems to be an acceptable compromise.
FIXED-IN: 4.8.1

M  +3    -1    dolphin/src/kitemviews/kfileitemmodelrolesupdater.cpp

http://commits.kde.org/kde-baseapps/6f65a1745caccc1fe27522a001592a3315325084
Comment 5 Peter Penz 2012-02-03 15:16:40 UTC
Git commit 912765b5f9b79654652620447c68e5a918f816db by Peter Penz.
Committed on 03/02/2012 at 09:57.
Pushed by ppenz into branch 'master'.

Folders Panel: Show expansion toggles for directories on ISO-images

When counting the number of sub-directories consider unknown file types
as potential directories. In the "worst case" an expansion toggle will be
shown although the directory contains only files, however from a performance
point of view this seems to be an acceptable compromise.
FIXED-IN: 4.8.1

M  +3    -1    dolphin/src/kitemviews/kfileitemmodelrolesupdater.cpp

http://commits.kde.org/kde-baseapps/912765b5f9b79654652620447c68e5a918f816db